[tool.poetry]
name = "docbase-query"
version = "0.1.0"
description = "Query DocBase memos"
authors = ["Shinya Ishida <shinyaishida@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "*"
requests = "*"
slackclient = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
